--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="container">
         <section class="photo">
             <img src="images/profile.png" alt="Andrei Maslov" class="photo">
         </section>
@@ -19,7 +19,7 @@
         </section>
         <section class="job-position">Junior frontend developer</section>
         <section class="contacts">
-            <h2>Contact me</h2>
+            <header>Contact me</header>
             <ul>
                 <li class="email">andd.maslov</li>
                 <li class="telegram"><a href="https://t.me/anddmaslov">@anddmaslov</a></li>
@@ -27,18 +27,18 @@
             </ul>
         </section>
         <section class="about">
-            <h2>About</h2>
+            <header>About</header>
             <p>I have some years software development experience. It is mostly a development of desktop and embedded
                 applications.</p>
             <p>I want to get frontend development experience by this course.</p>
             <p>I never stop learning new things.</p>
         </section>
         <section class="skills">
-            <h2>Skills</h2>
+            <header>Skills</header>
             TODO
         </section>
         <section class="experience">
-            <h2>Experience</h2>
+            <header>Experience</header>
             <ul>
                 <li>
                     <div class="company">2GIS</div>
@@ -67,7 +67,7 @@
             </ul>
         </section>
         <section class="education">
-            <h2>Education</h2>
+            <header>Education</header>
             <ul>
                 <li>
                     <div class="year">2011-2015</div>
@@ -84,7 +84,7 @@
             </ul>
         </section>
         <section class="code-example">
-            <h2>Code example</h2>
+            <header>Code example</header>
             <code>
                     <pre>
 // Codewars: Training on Sentence Smash.
@@ -102,7 +102,7 @@ function smash (words) {
                 </code>
         </section>
         <section class="languages">
-            <h2>Languages</h2>
+            <header>Languages</header>
             <ul>
                 <li>
                     <div class="language">Russian</div>
