fit: fix issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CV#2. HTML.CSS & Github</title>
+    <title>CV#2. HTML.CSS &amp; Github</title>
 </head>
 
 <body>
@@ -85,8 +85,7 @@
         </section>
         <section class="code-example">
             <header>Code example</header>
-            <code>
-                    <pre>
+            <pre>
 // Codewars: Training on Sentence Smash.
 function smash (words) {
     sentence = "";
@@ -98,8 +97,7 @@ function smash (words) {
     words.forEach(concat);
     return sentence;
 };
-                    </pre>
-                </code>
+            </pre>
         </section>
         <section class="languages">
             <header>Languages</header>
